--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,11 @@ plugins {
 apply plugin: 'kotlin' // Required for Kotlin integration
 apply plugin: "kotlin-spring" // https://kotlinlang.org/docs/reference/compiler-plugins.html#spring-support
 
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+	kotlinOptions {
+		jvmTarget = "1.8"
+	}
+}
 
 group = 'com.josias'
 version = '0.0.1-SNAPSHOT'
